--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/returnly/0b779427-7507-4920-836d-0cc0bba8d148'>Returnly - Engineering Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://spnsolutions.recruiterbox.com/jobs/fk03one/'>
+    Project Manager at SPN Solutions
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1941281'>Job Application for Technical Program Manager at Pivotal Software</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ox9jbfwU&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=neF5qMwF'>NICE inContact Careers - Associate Project Manager II</a></h5> 
+<p><span class="badge badge-light">Columbus, Ohio  Columbus, OH</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://www.orizon.de/de/job/project-manager-airbus-m-w-d-finkenwerder-16408'>Project Manager Airbus (m/w/d) in Finkenwerder - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -148,7 +166,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=o1ncbfwv&__jvst=Employee&__jvsd=sdL0qgw9&__jvsc=Twitter&bid=nCyRqMwI'>Forescout Technologies Inc. Careers - Professional Services Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=o1ncbfwv&__jvst=Employee&__jvsd=sdL0qgw9&__jvsc=Twitter&bid=nCyRqMwI'>Forescout Technologies Inc. Careers - Professional Services Project Manager</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -218,7 +236,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -266,7 +284,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -330,7 +348,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -433,22 +451,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <h5><a href='https://jobs.smartrecruiters.com/MX/743999698620631-project-manager'>MX Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/rappi/5fa8bc7c-b739-45e3-9b69-87c51929bf30'>Rappi - Project Manager - Payments and Fraud</a></h5> 
-<p><span class="badge badge-light">Buenos Aires</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/rappi/d0123a92-c5b4-49b2-8d5c-85ac92d07da2'>Rappi - Project Manager - Payments and Fraud</a></h5> 
-<p><span class="badge badge-light">Bogot?</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/beyondmeat/61ecafea-93c6-4233-9b0f-7a00305a79d2'>Beyond Meat - Project Manager</a></h5> 
-<p><span class="badge badge-light">El Segundo, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qodaVfwq&k=Job&j=oi3tbfwJ&__jvst=Employee+Referral&__jvsd=sI5ktgwl&__jvsc=Twitter&bid=nGkcqMwT'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
-<p><span class="badge badge-light">California</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
